--- a/asso_page1.html
+++ b/asso_page1.html
@@ -8,7 +8,30 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+            <a class="navbar-brand text-white " href="#">
+                <img src="logo-asso-oiseaux.jpg" alt="logo de notre association, Nos amis les Oiseaux" class="logo-img">
+            </a>    
+            <button class="navbar-toggler btn btn-warning" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white taille-text-nav " href="#Apropos" ><span class="point-visible">•</span> À propos </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white  taille-text-nav" href="page2.html"><span class="point-visible">•</span> Activités</a>
+                    </li>
+                    <li class="nav-item"> 
+                        <a class="nav-link text-white  taille-text-nav" href="#NousContacter" ><span class="point-visible">•</span> Contact</a>
+                    </li> 
+                </ul>
+            </div>
+        </nav>
+    </header>
 
 
     
