--- a/asso_page2.html
+++ b/asso_page2.html
@@ -8,7 +8,30 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+            <a class="navbar-brand text-white " href="#">
+                <img src="logo-asso-oiseaux.jpg" alt="Logo de notre association, Nos Amis les Oiseaux" class="logo-img">
+            </a>
+            <button class="navbar-toggler btn btn-danger " type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white taille-text-nav " href="index.html#Apropos"><span class="point-visible">•</span> À propos </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white taille-text-nav " href="#"> <span class="point-visible">•</span> Nos activités</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white taille-text-nav " href="index.html#NousContacter"><span class="point-visible">•</span> Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
 
     
