Premier paragraphe + styles supplémentaires

--- a/asso_page1.html
+++ b/asso_page1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="asso.css">
+    <link rel="stylesheet" href="asso_style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -32,10 +32,26 @@
             </div>
         </nav>
     </header>
+    <br>
+    <section class="container-fluid sans-ombre">
+        <h1 class="titre-accueil text-center">NOS AMIS LES OISEAUX</h1>
+    </section>
+    <br>
+    <section class="container-fluid">
+        <h3 class="title-style " id="Apropos">À propos de nous </h3>
+        <div class="row" id="GoingTop">
+            <div class="col-12">
+                <p class="border border-dark p-2 para-style fond-vert">Bienvenue chez "Nos Amis les Oiseaux", une association dévouée à la préservation et à l'appréciation des espèces aviaires. Notre passion commune pour les oiseaux nous guide dans la création d'un environnement où ces merveilleuses créatures peuvent prospérer. Que vous soyez un ornithologue chevronné ou simplement émerveillé par la beauté des plumes, notre communauté vous accueille à bras ouverts. À travers des sorties d'observation, des ateliers éducatifs et des projets de conservation, nous partageons connaissances et expériences pour sensibiliser à l'importance de la biodiversité aviaire. Rejoignez-nous dans notre engagement à protéger nos amis à plumes et à découvrir la richesse fascinante du monde des oiseaux. Ensemble, volons vers un avenir où chaque gazouillis résonne dans un écosystème équilibré et préservé.</p>
+            </div>
+         </div> 
+    </section>
+     <br>
 
-
+     <br>
+     <footer >
+         <p >&copy; 2023 Nos Amis les Oiseaux</p>
+     </footer>
     
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
