--- a/asso_page1.html
+++ b/asso_page1.html
@@ -46,6 +46,69 @@
          </div> 
     </section>
      <br>
+     <section class="container-fluid sans-ombre">
+        <div class="row "> 
+            <div class=" col-md-4 petite-marge">
+                <div class="container sans-ombre taille-conteneur">
+                    <button type="button" class="btn btn-lg btn-primary  " data-toggle="modal" data-target="#exempleModal">
+                        <p class="para-style m-auto sans-ombre ">Voir plus ?</p>
+                    </button>
+                    <div class="modal fade custom-modal" id="exempleModal" tabindex="-1" aria-labelledby="exempleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-verti-centre">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h3 class="modal-title title-style text-center" id="exempleModalLabel">En savoir davantage ?</h3>
+                                </div>
+                                <div class="modal-body">
+                                    <a href="https://www.lpo.fr" target="blank" class="align-items-center"><p class="para-style sans-ombre style-lpo text-white  text-center">LPO.fr</p></a>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><p class="para-style sans-ombre">Fermer</p></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-8">
+                <div id="carouselExample" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="héron-branche.jpg" class="d-block w-100 img-fluid" alt="Héron sur une branche">
+                            <div class="carousel-caption d-none d-md-block text-white align-text-bottom">
+                                <h5 class="title-style">Héron</h5>
+                                <p class="para-style"></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="faucon-chasse.jpg" class="d-block w-100 img-fluid" alt="Un faucon crécerelle en chasse au-dessus d'un champ">
+                            <div class="carousel-caption d-none d-md-block text-white align-text-bottom">
+                                <h5 class="title-style">Faucon crécerelle</h5>
+                                <p class="para-style"></p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="rouge-gorge-foret.jpg" class="d-block w-100 img-fluid" alt="Jeune rouge-gorge sur une branche">
+                            <div class="carousel-caption d-none d-md-block text-white align-text-bottom">
+                                <h5 class="title-style">Rouge-gorge</h5>
+                                <p class="para-style"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
      <br>
      <footer >
