Ajout des textes et images, et de leurs styles associés

--- a/asso_page1.html
+++ b/asso_page1.html
@@ -23,7 +23,7 @@
                         <a class="nav-link text-white taille-text-nav " href="#Apropos" ><span class="point-visible">•</span> À propos </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white  taille-text-nav" href="page2.html"><span class="point-visible">•</span> Activités</a>
+                        <a class="nav-link text-white  taille-text-nav" href="asso_page2.html"><span class="point-visible">•</span> Activités</a>
                     </li>
                     <li class="nav-item"> 
                         <a class="nav-link text-white  taille-text-nav" href="#NousContacter" ><span class="point-visible">•</span> Contact</a>
@@ -107,7 +107,32 @@
             </div>
         </div>
     </section>
-
+    <main class="container-fluid mt-4 container-style"  >
+        <!-- Contenu principal de la page-->
+        <h1 class="title-style">Contenu principal</h1>
+<div class="row p-2">
+    <div class="col-md-6 p-2 "><p class="para-style border border-dark p-2 fond-para_style">Notre Mission : Chez NosAmislesOiseaux, nous croyons fermement que chaque oiseau a un rôle essentiel dans l'équilibre de notre écosystème. Notre mission est de sauvegarder ces merveilleuses créatures, en fournissant des ressources, des programmes éducatifs et des initiatives de préservation pour assurer un avenir durable pour nos amis à plumes.</div>
+    <div class="col-md-6 p-2 "><p class="para-style border border-dark p-2 fond-para_style2">Notre Mission : Chez NosAmislesOiseaux, nous croyons fermement que chaque oiseau a un rôle essentiel dans l'équilibre de notre écosystème. Notre mission est de sauvegarder ces merveilleuses créatures, en fournissant des ressources, des programmes éducatifs et des initiatives de préservation pour assurer un avenir durable pour nos amis à plumes.
+    </div> 
+    <div class="col-md-6 p-2 "><p class="para-style border border-dark p-2 fond-para_style">Engagement envers la Biodiversité : Nous reconnaissons l'importance de la biodiversité dans la préservation de notre planète. En travaillant en étroite collaboration avec des experts, des bénévoles dévoués et la communauté, nous nous efforçons de créer des habitats favorables, de sensibiliser sur les enjeux liés à la protection des oiseaux, et de favoriser une coexistence harmonieuse entre les humains et les oiseaux.</div>
+    <div class="col-md-6 p-2"><p class="para-style border border-dark p-2 fond-para_style2">Rejoignez-nous dans notre Action : NosAmislesOiseaux vous invite à vous impliquer dans notre action. Que vous soyez un passionné d'ornithologie, un bénévole ou un simple amoureux de la nature, il y a de nombreuses façons de contribuer. Explorez notre site pour en savoir plus sur nos projets actuels, nos événements à venir et comment vous pouvez faire la différence pour la vie des oiseaux et de notre planète.</div>
+</div>    
+</main>
+<br>
+<section class="container-fluid border border-dark fond-vert " >
+    <h4 id="NousContacter" class="title-style" >Nous Contacter </h4>
+    <div class="row">
+        <div class="col-md-6 "><p class="para-style sans-ombre "> <span class="souligne">Mail</span>: nosamislesoiseaux@gmail.Com</p></div>
+        <div class="col-md-6 "><p class="para-style sans-ombre"> <span class="souligne">Tél :</span> 06 08 74 55 41</p></div>
+    </div>
+    <h4 class="title-style">Nos réseaux</h4>
+    <div class="row">
+    <div class="col-md-6"><p class="para-style sans-ombre"> <span class="souligne">Facebook :</span> NosAmislesOiseaux</p></div>
+    <div class="col-md-6"><p class="para-style sans-ombre"> <span class="souligne">Instagram :</span>NosAmislesOiseaux</p></div>
+    <div class="col-md-6"><p class="para-style sans-ombre"> <span class="souligne">Youtube :</span>NosAmislesOiseaux</p></div>
+    <div class="col-md-6"><p class="para-style sans-ombre"> <span class="souligne">Tiktok :</span>NosAmislesOiseaux</p></div>
+</div>
+</section>
 
 
      <br>
