--- a/asso_page1.html
+++ b/asso_page1.html
@@ -133,7 +133,12 @@
     <div class="col-md-6"><p class="para-style sans-ombre"> <span class="souligne">Tiktok :</span>NosAmislesOiseaux</p></div>
 </div>
 </section>
-
+<br>
+<section class="container-fluid">
+    <div class="row">
+        <a href="#" id="btnToTop" class="col-12 btn-primary mx-auto text-center bouton-style">Revenir en haut</a>
+    </div>
+</section>
 
      <br>
      <footer >
