Ajout des balises meta et une police

--- a/asso_page1.html
+++ b/asso_page1.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nos Amis les Oiseaux</title>
+    <meta name="description" content="Nos Amis Les Oiseaux : Rejoignez notre association dédiée à la protection et à la défense des oiseaux. Ensemble, œuvrons pour préserver la biodiversité aviaire, sensibiliser à l'importance de leur conservation et participer à des initiatives écologiques. Agissons pour un monde où nos amis les oiseaux prospèrent en toute sécurité.">
+    <meta name="keywords" content="oiseaux, protection des oiseaux, biodiversité aviaire, conservation, association écologique, sensibilisation, défense de l'environnement, nos amis les oiseaux">
     <link rel="stylesheet" href="asso_style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
-<body>
+<body class="font-doodle_shadow">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <a class="navbar-brand text-white " href="#">
