--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <a class="navbar-brand text-white " href="#">
-                <img src="logo-asso-oiseaux.jpg" alt="logo de notre association, Nos amis les Oiseaux" class="logo-img">
+                <img src="img/logo-asso-oiseaux.jpg" alt="logo de notre association, Nos amis les Oiseaux" class="logo-img">
             </a>    
             <button class="navbar-toggler btn btn-warning" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,21 +76,21 @@
                 <div id="carouselExample" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="héron-branche.jpg" class="d-block w-100 img-fluid" alt="Héron sur une branche">
+                            <img src="img/héron-branche.jpg" class="d-block w-100 img-fluid" alt="Héron sur une branche">
                             <div class="carousel-caption d-none d-md-block text-white align-text-bottom">
                                 <h5 class="title-style">Héron</h5>
                                 <p class="para-style"></p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="faucon-chasse.jpg" class="d-block w-100 img-fluid" alt="Un faucon crécerelle en chasse au-dessus d'un champ">
+                            <img src="img/faucon-chasse.jpg" class="d-block w-100 img-fluid" alt="Un faucon crécerelle en chasse au-dessus d'un champ">
                             <div class="carousel-caption d-none d-md-block text-white align-text-bottom">
                                 <h5 class="title-style">Faucon crécerelle</h5>
                                 <p class="para-style"></p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="rouge-gorge-foret.jpg" class="d-block w-100 img-fluid" alt="Jeune rouge-gorge sur une branche">
+                            <img src="img/rouge-gorge-foret.jpg" class="d-block w-100 img-fluid" alt="Jeune rouge-gorge sur une branche">
                             <div class="carousel-caption d-none d-md-block text-white align-text-bottom">
                                 <h5 class="title-style">Rouge-gorge</h5>
                                 <p class="para-style"></p>
